# multisector-pyFi

./: .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pipeline.ipynb  pyproject.toml  requirements.txt
data/: sample_fundamentals.csv  sample_prices.csv  sample_tickers.csv
schema/: schema.sql
src/backtest/: cli_run_backtest.py  cv.py  log.py  metrics.py  optimizer.py  plotting.py  risk_free_US.py  runner.py  scoring.py  weights.py
src/db/: client.py  create_db.py
src/etl/: collect.py  ingest.py
src/features/: compute_factors.py
src/utils/: config.py
tests/: conftest.py  test_backtest.py  test_cv.py  test_factors.py  test_metrics.py  test_optimizer.py  test_weights.py
