[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multisector-pyfi"
version = "0.1.0"
description = "Multi-sector equity analysis: ingest, factor computation, scoring, and backtesting"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "python-dotenv",
    "pytest>=7.4",
    "optuna>=3.0",
]

[project.scripts]
run-backtest = "src.backtest.log:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
